--- a/Pages/web.html
+++ b/Pages/web.html
@@ -14,7 +14,7 @@
 
     <body>
         <!-- HEADER -->
-        <div class="header">
+        <header>
             <div class="PP">
                 <a href="../index.html">
                     <h1>Pauline Pierson</h1>
@@ -37,7 +37,7 @@
                     </div>
                 </a>
             </div>
-        </div>
+        </header>
         <!-- FIN HEADER -->
         <!-- WORK -->
         <div class="bandeau" id="b-web">
@@ -99,7 +99,7 @@
         <script src="app.js" defer></script>
     </body>
 
-    <footer class="foot">
+    <footer>
         <a href="../Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
