--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </body>
 
-    <footer class="foot">
+    <footer>
         <a href="../Portfolio/Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
