--- a/Pages/mention.html
+++ b/Pages/mention.html
@@ -14,7 +14,7 @@
 
     <body>
         <!-- HEADER -->
-        <div class="header">
+        <header>
             <div class="PP">
                 <a href="../index.html">
                     <h1>Pauline Pierson</h1>
@@ -37,7 +37,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </header>
         <!-- FIN HEADER -->
         <!-- MENTION -->
         <div class="bandeau" id="b-f">
@@ -86,7 +86,7 @@
         <!-- FIN MENTION -->
     </body>
 
-    <footer class="foot">
+    <footer>
         <a href="../Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
