--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -91,6 +91,7 @@
                     <img src="../Images/WhoamI/Logo HTML5.png" alt="HTML5" title="HTML5">
                     <img src="../Images/WhoamI/Logo CSS3.png" alt="CSS3" title="CSS3">
                     <img src="../Images/WhoamI/Logo JavaScript.png" alt="JS" title="JavaScript">
+                    <img src="../Images/WhoamI/Logo PHP.png" alt="PHP" title="PHP">
                     <img src="../Images/WhoamI/Logo Python.png" alt="Python" title="Python">
                 </div>
             </div>
@@ -100,11 +101,11 @@
     </body>
 
     <footer>
-        <a href="../Pages/whoami.html">
+        <a href="./whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
         <h4>Tous droits réservés © Pauline Pierson</h4>
-        <h4><a href="../Pages/mention.html">Mentions légales</a></h4>
+        <h4><a href="./mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
