--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <h2>L'alliance du print et du web</h2>
         </div>
         <div class="onglet">
-            <a href="../Portfolio/Pages/print.html">
+            <a href="./Pages/print.html">
                 <div class="rond" id="print">
                     <h3>Print</h3>
                 </div>
             </a>
-            <a href="../Portfolio/Pages/web.html">
+            <a href="./Pages/web.html">
                 <div class="rond" id="web">
                     <h3>Web</h3>
                 </div>
             </a>
-            <a href="../Portfolio/Pages/contact.html">
+            <a href="./Pages/contact.html">
                 <div class="rond" id="contact">
                     <h3>Contact</h3>
                 </div>
@@ -39,11 +39,11 @@
     </body>
 
     <footer>
-        <a href="../Portfolio/Pages/whoami.html">
+        <a href="./Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
         <h4>Tous droits réservés © Pauline Pierson</h4>
-        <h4><a href="../Portfolio/Pages/mention.html">Mentions légales</a></h4>
+        <h4><a href="./Pages/mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
