--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -92,7 +92,8 @@
                     <img src="../Images/WhoamI/Logo CSS3.png" alt="CSS3" title="CSS3">
                     <img src="../Images/WhoamI/Logo JavaScript.png" alt="JS" title="JavaScript">
                     <img src="../Images/WhoamI/Logo PHP.png" alt="PHP" title="PHP">
-                    <img src="../Images/WhoamI/Logo Python.png" alt="Python" title="Python">
+                    <img src="../Images/WhoamI/Logo Sass.png" alt="Sass/SCSS" title="Sass/SCSS">
+                    <img src="../Images/WhoamI/Logo MySQL.png" alt="MySQL" title="MySQL">
                 </div>
             </div>
         </div>
